# livros-vai-na-web-fullstack

./: README.md
back-end/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
back-end/src/: app.py
back-end/src/templates/: index.html
front-end/: README.md  index.html  package-lock.json  package.json
front-end/src/: App.jsx
front-end/src/components/Footer/: footer.module.scss  index.jsx
front-end/src/components/Header/: header.module.scss  index.jsx
front-end/src/data/: livros.jsx
front-end/src/pages/Home/: Home.jsx  home.module.scss
front-end/src/pages/LivrosDoados/: LivrosDoados.jsx  donate-books.module.scss
front-end/src/pages/QueroDoar/: QueroDoar.jsx  donate.module.scss
front-end/src/styles/: globalStyle.scss
